--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 Flask==3.1.0
-huggingface-hub==0.29.2
-langchain-huggingface==0.1.2
+gunicorn==
+langchain-ollama==0.3.4
 python-dotenv==1.0.1
-tokenizers==0.21.0
-torch==2.5.0 --index-url https://download.pytorch.org/whl/cu126
-transformers==4.49.0
 langgraph==0.3.21
+gunicorn==23.0.0
